--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40"
+    "gatsby-link": "^1.6.40",
+    "gatsby-plugin-styled-components": "^2.0.11",
+    "styled-components": "^3.2.5"
   }
 }
